--- a/src/app/api-th/api-th.component.html
+++ b/src/app/api-th/api-th.component.html
@@ -3,7 +3,7 @@
         <div class="card my-5">
             <div class="card-header">
                 <div class="row mx-2">
-                    <h4>API documentation</h4>
+                    <h4>เอกสาร API</h4>
                     <div class="ml-auto">
                         <div class="btn-group btn-group-toggle" data-toggle="buttons">
                             <label class="btn btn-secondary">
@@ -72,10 +72,11 @@
                         <p>
                             ยินดีด้วย! คุณได้ใช้งาน visualization ของคุณบนเว็บไซต์ของคุณเรียบร้อยแล้ว</p>
                         <br>
-                        <figure class="mb-5">
+                        <!--figure class="mb-5">
                             <img src="../../assets/image/web.png" alt="iframe" style="width: 100%;object-fit: contain;">
                             <figcaption class="text-center mt-3">Result on your website</figcaption>
-                        </figure>
+                        </figure-->
+                        <iframe style="width: 100%;height:70vh" src="//jsfiddle.net/screwdrivercx/54qfhsmx/16/embedded/html,result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
                     </div>
 
                     <hr>
