--- a/src/app/templates/templateList.component.html
+++ b/src/app/templates/templateList.component.html
@@ -14,7 +14,7 @@
             <div class="row d-flex justify-content-start ml-5">
                 <div *ngFor="let template of templates">
                     <div class="card m-5" style="width: 20rem;">
-                        <img class="card-img-top" src="{{apiUrl}}/static/{{template.TemplateName}}.png"
+                        <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}"
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">{{template.TemplateName}}</h5>
