--- a/src/app/api/api.component.html
+++ b/src/app/api/api.component.html
@@ -74,10 +74,11 @@
                         </figure>
                         <p>Congratulations! You have embedded your visualization on your website.</p>
                         <br>
-                        <figure class="mb-5">
+                        <!--figure class="mb-5">
                             <img src="../../assets/image/web.png" alt="iframe" style="width: 100%;object-fit: contain;">
                             <figcaption class="text-center mt-3">Result on your website</figcaption>
-                        </figure>
+                        </figure-->
+                        <iframe style="width: 100%;height:70vh" src="//jsfiddle.net/screwdrivercx/54qfhsmx/16/embedded/html,result/" allowfullscreen="allowfullscreen" allowpaymentrequest frameborder="0"></iframe>
                     </div>
 
                     <hr>
