--- a/src/app/generate/generate.component.html
+++ b/src/app/generate/generate.component.html
@@ -9,13 +9,13 @@
                         <div class="row d-flex justify-content-start ml-5">
                         <div *ngFor="let template of templates">
                             <div class="card m-5" style="width: 20rem;">
-                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.TemplateName}}.png"
+                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}"
                                     alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">{{template.TemplateName}}</h5>
                                     <p class="card-text">Interactive {{template.TemplateName}}</p>
                                     <div class="row pl-3 pr-3"> 
-                                        <button class="btn btn-sm btn-primary" (click)="setValue(template.TemplateName,stepper)">Select</button>
+                                        <button class="btn btn-sm btn-primary" (click)="setValue(template.TemplateName,template.img,stepper)">Select</button>
                                         <p class="text-success ml-auto" *ngIf="template.TemplateName == vname">Current</p>
                                     </div>                           
                                 </div>
@@ -74,7 +74,7 @@
                                 accept=".csv,.json">
                             <label *ngIf="!isEditMode && !isDataFileChange" class="custom-file-label text-secondary"
                                 for="customFile">{{dataInputText}}      <mat-icon>library_add</mat-icon></label>
-                            <label *ngIf="!isEditMode && isDataFileChange" class="custom-file-label"
+                            <label *ngIf="isDataFileChange" class="custom-file-label"
                                 for="customFile">{{dataInputText}}</label>
                             <label *ngIf="isEditMode && !isDataFileChange" class="custom-file-label text-secondary"
                                 for="customFile">current : {{dataInputText}}</label>
@@ -95,7 +95,7 @@
                                 accept=".csv,.json">    
                             <label *ngIf="!isEditMode && !isConfigFileChange" class="custom-file-label text-secondary"
                                 for="customFile">{{configInputText}}      <mat-icon>library_add</mat-icon></label>    
-                            <label *ngIf="!isEditMode && isConfigFileChange" class="custom-file-label"
+                            <label *ngIf="isConfigFileChange" class="custom-file-label"
                                 for="customFile">{{configInputText}}</label>
                             <label *ngIf="isEditMode && !isConfigFileChange" class="custom-file-label text-secondary"
                                 for="customFile">current : {{configInputText}}</label>
@@ -126,7 +126,7 @@
             <mat-step>
                 <ng-template matStepLabel><h5>Summary</h5></ng-template>
                 <div class="col-md-4 offset-md-4 text-center">
-                    <img class="card-img-top mt-5" src="{{apiUrl}}/static/{{firstFormGroup.get('vname').value}}.png" alt="template img">
+                    <img class="card-img-top mt-5" *ngIf="img" src="{{apiUrl}}/static/{{img}}" alt="template img">
                     <div>
                         <p class="row mt-5">Please confirm your settings for the visualization before generate.</p>
                         <div class="row">
