--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,9 +9,9 @@
         </div>  
     </div>
 
-    <div class="row p-4">
+    <div class="row p-4" *ngIf="user.role == 'user' || user.role == 'designer'" >
         <div class="col-md-8 mb-4">
-            <div *ngIf="count > 0" class="card mb-4">
+            <div class="card mb-4" *ngIf="count > 0">
                 <h4 class="card-header">Recently Generated Visualizations</h4>
                 <div class="card-body">
                     <div *ngIf="items">
@@ -20,7 +20,7 @@
                                 <a *ngIf="item.status=='active'" routerLink="/generate/result/{{item.refId}}"
                                     style="color: inherit;text-decoration: none;">
                                     <div class="card m-3" style="width: 18rem;">
-                                        <img class="card-img-top" src="{{apiUrl}}/static/{{item.template}}.png"
+                                        <img class="card-img-top" src="{{apiUrl}}/static/{{item.img}}"
                                             alt="Card image cap">
                                         <div class="card-body mt-auto">
                                             <div class="card-text">
@@ -37,7 +37,7 @@
                                 </a>
                                 <div *ngIf="item.status=='inactive'" class="card m-3 d-flex justify-content-start "
                                     style="width: 18rem;background-color: rgba(245, 245, 245, 1);opacity: .5;">
-                                    <img class="card-img-top" src="{{apiUrl}}/static/{{item.template}}.png"
+                                    <img class="card-img-top" src="{{apiUrl}}/static/{{item.img}}"
                                         alt="Card image cap">
                                     <div class="card-body mt-auto">
                                         <div class="card-text">
@@ -63,7 +63,7 @@
                     <owl-carousel-o [options]="customOptions">
                         <ng-container *ngFor="let template of templates">
                             <ng-template carouselSlide>
-                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.TemplateName}}.png"
+                                <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}"
                                     alt="card image">
                                 <a routerLink="/generate/result/example-{{template.TemplateName}}">
                                     <div class="text-center">
@@ -114,7 +114,9 @@
                                         <button class="btn btn-sm btn-outline-primary" id="dropdownMenu1"
                                             ngbDropdownToggle>Manage</button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenu1" ngbDropdownMenu>
-                                            <a routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item"
+                                            <a *ngIf="item.status=='active'" routerLink="/generate/edit/{{item.refId}}"><button class="dropdown-item"
+                                                    [disabled]="item.status=='inactive'">Edit</button></a>
+                                            <a *ngIf="item.status=='inactive'"><button class="dropdown-item"
                                                     [disabled]="item.status=='inactive'">Edit</button></a>
                                             <button class="dropdown-item" (click)="delete(item.id,item.refId)"
                                                 [disabled]="item.isDeleting">
@@ -180,4 +182,14 @@
         </div> 
     </div>
 
+    <div class="row p-4" *ngIf="user.role == 'admin' || user.role == 'superadmin'" >
+        <div class="col-md-8 mb-4">
+            <div class="card mb-4" *ngIf="count > 0">
+                <div class="card-header">New Users</div>
+                <div class="card-body">
+                    <div id="chartContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
