--- a/src/app/generate/result.component.html
+++ b/src/app/generate/result.component.html
@@ -6,7 +6,7 @@
         <div class="embed-responsive embed-responsive-16by9">
             <iframe class="e2e-iframe-trusted-src" [src]="tryDoctype"></iframe>
         </div>
-        <div *ngIf="!isExample">
+        <div>
             <div class="mt-5 text-center">
                 <a [href]="pptUrl"><button class="btn btn-success">View Full Size</button></a>
             </div>
