--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,7 +65,7 @@
                             <ng-template carouselSlide>
                                 <img class="card-img-top" src="{{apiUrl}}/static/{{template.img}}"
                                     alt="card image">
-                                <a routerLink="/generate/result/example-{{template.TemplateName}}">
+                                <a routerLink="/tutorial/details/{{template.id}}">
                                     <div class="text-center">
                                         <p>{{template.TemplateName}}</p>
                                     </div>
