--- a/src/app/users/list.component.html
+++ b/src/app/users/list.component.html
@@ -17,7 +17,7 @@
             </form>
         </div>
 
-        <table mdbTable class="table table-striped" #tableEl="mdbTable">
+        <table mdbTable class="table" #tableEl="mdbTable">
             <thead>
                 <tr>
                     <th style="width: 30%">uid</th>
