--- a/src/app/templates/add-edit.component.html
+++ b/src/app/templates/add-edit.component.html
@@ -90,6 +90,50 @@
                     </div>
                 </div>
 
+                <div class="form-group mt-5 mb-5">
+                    <h6>Please Input Example Data File :</h6>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="customFile" formControlName="data"
+                            (change)="onFileChange('data',$event)"
+                            [ngClass]="{ 'is-invalid': (submitted && f.data.errors) || (submitted && !isDataValid)}"
+                            accept=".csv,.json">
+                        <label *ngIf="!isEditMode && !isDataFileChange" class="custom-file-label text-secondary"
+                            for="customFile">{{dataInputText}}      <mat-icon>library_add</mat-icon></label>
+                        <label *ngIf="isDataFileChange" class="custom-file-label"
+                            for="customFile">{{dataInputText}}</label>
+                        <label *ngIf="isEditMode && !isDataFileChange" class="custom-file-label text-secondary"
+                            for="customFile">current : {{dataInputText}}</label>
+                        <div *ngIf="submitted && f.data.errors" class="invalid-feedback">
+                            <div *ngIf="f.data.errors.required">Example data File is required</div>
+                        </div>
+                        <div *ngIf="submitted && !isDataValid" class="invalid-feedback">
+                            <div *ngIf="!isDataValid">Please input only .csv or .json file.</div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group mt-5 mb-5">
+                    <h6>Please Input Example Config File :</h6>
+                    <div class="custom-file">
+                        <input type="file" class="custom-file-input" id="customFile" formControlName="config"
+                            (change)="onFileChange('config',$event)"
+                            [ngClass]="{ 'is-invalid': (submitted && f.config.errors) || (submitted && !isConfigValid)}"
+                            accept=".csv,.json">
+                        <label *ngIf="!isEditMode && !isConfigFileChange" class="custom-file-label text-secondary"
+                            for="customFile">{{configInputText}}      <mat-icon>library_add</mat-icon></label>
+                        <label *ngIf="isConfigFileChange" class="custom-file-label"
+                            for="customFile">{{configInputText}}</label>
+                        <label *ngIf="isEditMode && !isConfigFileChange" class="custom-file-label text-secondary"
+                            for="customFile">current : {{configInputText}}</label>
+                        <div *ngIf="submitted && f.config.errors" class="invalid-feedback">
+                            <div *ngIf="f.config.errors.required">Example config File is required</div>
+                        </div>
+                        <div *ngIf="submitted && !isConfigValid" class="invalid-feedback">
+                            <div *ngIf="!isConfigValid">Please input only .csv or .json file.</div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <button *ngIf="isEditMode" [disabled]="loading" class="btn btn-primary">
                         <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
